tests/ui/errors/remap-path-prefix-diagnostics.only-debuginfo-in-deps.stderr
error[E0277]: `A` doesn't implement `std::fmt::Display`
  --> $DIR/remap-path-prefix-diagnostics.rs:LL:COL
   |
LL | impl r#trait::Trait for A {}
   |                         ^ `A` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `A`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `Trait`
  --> $DIR/auxiliary/trait-debuginfo.rs:LL:COL
   |
LL | pub trait Trait: std::fmt::Display {}
   |                  ^^^^^^^^^^^^^^^^^ required by this bound in `Trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
